<resources>
    <string name="app_name">E-dacy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChooseAccount">Choose Account</string>
    <string name="email_hint">example@mail.com</string>
    <string name="password_hint">password</string>
    <string name="sign_in">Sign in</string>
    <string name="reset_password_link">Forgot your password? <u>Reset</u></string>
    <string name="create_account">New user? <u>Create an account</u>></string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="student">Student</string>
    <string name="background">background</string>
    <string name="guest">Guest</string>
    <string name="instructor">Instructor</string>
    <string name="staff">Staff</string>
    <string name="reset_password">Reset Password</string>
    <string name="logo">App Logo</string>
    <string name="Aspire_farther">Aspire farther...</string>
    <string name="title_fragment_home">HOME</string>
    <string name="title_fragment_sessions">SESSIONS</string>
    <string name="title_fragment_messages">MESSAGE</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_logout">Log out</string>
    <string name="action_search">Search</string>
    <string name="HARD_SKILLS">HARD SKILLS</string>
    <string name="SOFT_SKILLS">SOFT SKILLS</string>
    <string name="EMPLOYABILITY">EMPLOYABILITY</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="data_science">DATA SCIENCE</string>
    <string name="mobile_development">MOBILE DEVELOPMENT</string>
    <string name="Month">Month</string>
    <string name="day">Day</string>
    <string name="hour_text">12:00</string>
    <string name="number">0</string>
    <string name="description">Description:</string>
    <string name="homework">Homework:</string>
    <string name="resources">Resources: </string>
    <string name="feedbacks">Feedbacks:</string>
    <string name="feedback_form_link">Please fill out the <u>feedback form</u></string>
    <string name="profile">PROFILE</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="directory">DIRECTORY</string>
    <string name="channels">CHANNELS</string>
    <string name="my_space">MY SPACE</string>
    <string name="cohorte">\Cohort</string>
    <string name="username">Username</string>
    <string name="name">My Name</string>
    <string name="specialization">Specialization</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="login_success_message">Logged in</string>
    <string name="login_fail_message">Error! Please Check the credentials you provided</string>
    <string name="success">Success!</string>
    <string name="user_already_registered">User already registered</string>
    <string name="error_message">An error occured</string>
    <string name="reset_password_message">Password reset! Please follow the instructions sent to the the email you provided</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="cancel">CANCEL</string>
    <string name="save">OK</string>
    <string name="upload_success">File uploaded</string>
    <string name="upload_failed">Failed to Upload! Please, try again later.</string>
    <string name="profile_updated_message">Profile updated</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="complete_profile_message">Please complete your profile</string>
    <string name="user_token">user token</string>
    <string name="token_message">Error! Please enter the correct key</string>
    <string name="verify_email">Please confirm your credentials with the link sent to the email you provided</string>
    <string name="job_title">Job title</string>
    <string name="title_portfolios">PORTFOLIOS</string>
    <string name="portfolios">PortFolios</string>
    <string name="edacy">EDACY</string>
    <string name="view_resume">View Resumé</string>
    <string name="at_sign">\@</string>
    <string name="student_deleted">Student Deleted</string>
    <string name="choose_resume">Choose file</string>
    <string name="talent_resume">Resumé</string>
    <string name="payments">Payments</string>
    <string name="grades">Grades</string>
    <string name="events">Events</string>
    <string name="remove">Remove</string>
    <string name="upload_file">Upload a PDF</string>
    <string name="no_resume">No Resume Avalaible</string>
    <string name="grant_access">Please grant permission to select file</string>
    <string name="student_q_1">The instructor was on time?</string>
    <!--<string name="student_q_2">The instructor shared clearly the content and the concepts of the formation:</string>-->
    <string name="student_q_3">The instructor shared clearly the content and the concepts of the formation:</string>
    <string name="student_q_4">The instructor encouraged me to think critically and cultivate autonomy:</string>
    <string name="student_q_5">The methodology of the course was relevant:</string>
    <string name="student_q_6">The instructor mastered his subject:</string>
    <string name="student_q_7">The Objectives of the session was clear to me:</string>
    <string name="student_q_8">This session helped me discover new research paths to know more about the subject:</string>
    <string name="student_q_9">This session interested me and encouraged me to actively participate:</string>
    <string name="student_q_10">The instructor was available to answer our questions:</string>
    <string name="student_q_11">The instructor favored everyone\'s participation:</string>
    <string name="student_q_12">I felt heard and respected when I spoke during the session:</string>
    <string name="student_q_13">I appreciated the methods and tools used in this course:</string>
    <string name="student_q_14">The documents shared and the methods adopted were coherent with the objectives of the course:</string>
    <string name="student_q_15">The instructor incited us to ask questions and interrupt him when necessary:</string>
    <string name="student_q_16">How would you rate this course</string>
    <string name="student_q_17">How would you rate this instructor</string>
    <string name="student_q_18">What improvements do you suggest?</string>
    <string name="student_q_19">Overall, what are your general impressions regarding this makersday session?</string>
    <string name="feedback_sent">Feedback Sent</string>
    <string name="course_information">Course Information:</string>
    <string name="hour_and_date">Time and Date</string>
    <string name="feedback_imcomplete">Feedbacks imcompleted</string>
    <string name="feedback_complete">Feedback Completed</string>
    <string name="session_updated">Session Updated</string>
    <string name="ok">OK</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="write_post">New post</string>
    <string name="field_empty">Field empty</string>
    <string name="your_answer">Your answer...</string>
    <string name="enter_username">Please, complete your profile information</string>

    <array name="module_specialization">
        <item name="data_science">Data science</item>
        <item name="mobile_development">Mobile development</item>
        <item name="web_development">Web development</item>
    </array>
    <array name="job_title_array">
        <item name="lead_facilitator">Lead Facilitator</item>
        <item name="ssc">Student Success Coordinator</item>
        <item name="career_service_">Head of Career Services</item>
        <item name="office_manager">Office Manager</item>
        <item name="other">Other</item>
    </array>
</resources>
