<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="293dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24sp">

    <EditText
        android:id="@+id/dialog_instructor_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_field"
        android:hint="@string/instructor"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="visible"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/dialog_course_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_field"
        android:hint="@string/description"
        android:inputType="textMultiLine"

        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/dialog_homework_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_field"
        android:hint="@string/homework"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/dialo_resources_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_field"
        android:hint="@string/resources"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone"
        tools:ignore="Autofill" />


</LinearLayout>