<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cohort_clicked.fragments.StudentProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/student_profile_image"
                android:layout_width="278dp"
                android:layout_height="278dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_circle"
                android:contentDescription="@string/student"
                android:maxHeight="277dp"
                android:padding="2dp"
                android:src="@drawable/talent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/profile_student_linear_layout"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/student_profile_image">

                <!--User Full name-->


                <TextView
                    android:id="@+id/student_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="173dp"
                    tools:layout_editor_absoluteY="346dp" />

                <!--Username or Display Name-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:gravity="center"
                        android:text="@string/at_sign" />

                    <TextView
                        android:id="@+id/student_display_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/display_name"
                        tools:layout_editor_absoluteX="173dp"
                        tools:layout_editor_absoluteY="378dp" />

                </LinearLayout>

                <!--Cohort-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/student_cohort_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/cohorte"
                        tools:layout_editor_absoluteX="173dp"
                        tools:layout_editor_absoluteY="378dp" />

                    <TextView
                        android:id="@+id/student_cohort_num_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/number"
                        tools:ignore="RtlCompat"
                        tools:layout_editor_absoluteX="173dp"
                        tools:layout_editor_absoluteY="378dp" />

                </LinearLayout>

                <!--Specialization-->
                <TextView
                    android:id="@+id/student_specialization_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/specialization"
                    android:visibility="visible"
                    tools:layout_editor_absoluteX="161dp"
                    tools:layout_editor_absoluteY="412dp" />

                <!--Email-->
                <TextView
                    android:id="@+id/student_email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/email_hint"
                    tools:layout_editor_absoluteX="142dp"
                    tools:layout_editor_absoluteY="445dp" />

                <!--Phone Number-->
                <TextView
                    android:id="@+id/student_phone_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/phone_number"
                    tools:layout_editor_absoluteX="161dp"
                    tools:layout_editor_absoluteY="482dp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/student_profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/student_profile_image" />

            <Button
                android:id="@+id/view_resume_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/view_resume"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_student_linear_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>