<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorAccent"
        android:layout_gravity="top"
        android:gravity="top" />
    <!--First Name-->
    <EditText
        android:id="@+id/profile_first_name_edit"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="4dp"
        android:paddingStart="20sp"
        android:paddingLeft="20sp"
        android:textSize="15sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <!--Last Name-->
    <EditText
        android:id="@+id/profile_last_name_edit"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="4dp"
        android:paddingStart="20sp"
        android:paddingLeft="20sp"
        android:textSize="15sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <!--User Name or Display Name-->
    <EditText
        android:id="@+id/profile_display_edit"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="4dp"
        android:paddingStart="20sp"
        android:paddingLeft="20sp"
        android:textSize="15sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <!--Phone Number-->
    <EditText
        android:id="@+id/profile_phone_edit"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="4dp"
        android:paddingStart="20sp"
        android:paddingLeft="20sp"
        android:textSize="15sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <!--Cohort Name + number Picker-->
    <LinearLayout
        android:id="@+id/cohort_layout"
        android:layout_width="300dp"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="4dp"
            android:text="@string/cohorte"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <NumberPicker
            android:id="@+id/profile_cohort_number"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal" />

    </LinearLayout>

    <!--Specialization-->
    <Spinner
        android:entries="@array/module_specialization"
        android:id="@+id/profile_specialization_edit"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />



</LinearLayout>